--- a/css/homepage.css
+++ b/css/homepage.css
@@ -14,60 +14,82 @@ header {
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-    background-color: rgb(7, 2, 2);
 }
 
-
+/*Naveeeeee*/
 /* Navegacion*/
-
-nav {
+.header-nav {
+    background-color: black;
     position: fixed;
+}
+nav {
+    height: 100px;
     width: 100%;
-    height: 40px;
-    display: block;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(7, 2, 2);
+    
 }
 
 .logo {
-    width: 50px;
-    margin-right: 20px;
-    margin-top: 10px;
+    display: none;
 }
 
 .logo1 {
-    width: 24px;
-    margin-left: 7px;
+   display: none;
 }
 
+.bar-btn {
+    font-size: 25px;
+    color: white;
+    margin-right: 34px;
+    cursor: pointer;
+}
 .nav-menu {
     position: fixed;
     width: 100%;
+    height: 0vh;
     top: 100px;
-    background-color: #000000;
+    background-color: rgb(0, 0, 0, .95);
     text-align: center;
+    transition: all .5s;
 }
 
 .nav-menu li {
     display: none;
-    line-height: 30px;
+    line-height:  30px;
     margin: 50px 0;
     transition: all .5s;
 }
 
 .nav-menu li a {
-    color: rgb(248, 248, 248);
+    color: #fff;
     font-size: 16px;
     text-transform: uppercase;
     font-weight: 600;
 }
 
-.nav-menu li a:hover {
-    color: rgb(32, 216, 16);
-    transition: 3s;
+.nav-menu li a.active, .nav-menu li a:hover{
+    color:rgb(15, 136, 21);
+    transition: .3s;
 }
 
+#check {
+    display: none;
+}
+
+#check:checked ~ .nav-menu{
+    height: 100vh;
+}
+
+#check:checked ~ .nav-menu li {
+    display: block;
+}
+
+.nav-menu li a.active, .nav-menu li a:hover{
+    color: rgb(15, 136, 21);
+    transition: .3s;
+}
 
 /*Seccion de banners*/
 
@@ -76,16 +98,13 @@ nav {
     height: 340px;
     background-size: 250%;
     background-image: url(../img/banner-principal.png);
-    background-position: center;
 }
 
 .logo2 {
-    position: absolute;
     width: 340px;
     margin: 0 auto;
     padding-top: 280px;
     padding-left: 10%;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .banner-text {
@@ -94,10 +113,8 @@ nav {
     padding-top: 100px;
     padding-bottom: 100px;
     background-image: url(../img/banner-text.jpg);
-    background-position: center;
-    background-size: cover;
     font-size: 25px;
-    color: white
+    color: #031c02;
 }
 
 .banner-text p {
@@ -107,6 +124,7 @@ nav {
     margin: 40px;
 }
 
+
 .banner-textSecond {
     text-align: center;
     padding-top: 50px;
@@ -115,6 +133,7 @@ nav {
     background-size: cover;
     background-position: center;
     font-size: 25px;
+    color: #031c02;;
 }
 
 .banner-textSecond p {
@@ -131,11 +150,24 @@ nav {
     background: #C7A43B;
     border-radius: 40px;
     border: none;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    cursor: pointer;
 }
 
 
+.curious-fact {
+    width: 101px;
+    height: 32px;
+    background: rgb(8, 63, 6);
+    color: #f7f7f7;
+    border-radius: 10px;
+    margin: 10px 15px;
+}
+
 /* contenedor text */
+
+main.main-container {
+    padding-top: 76px;
+}
 
 .champions-container {
     text-align: center;
@@ -208,8 +240,8 @@ h3 {
 }
 
 .img-champions {
-    width: 195px;
-    height: 205px;
+    width: 119px;
+    height: 111px;
 }
 
 .name {
@@ -333,52 +365,80 @@ h3 {
 /* Responsive for desktop */
 
 @media screen and (min-width: 768px) {
+
     /*seccion nav*/
+
+    .header-nav {
+        background-color: black;
+        position: static;
+    }
+
+    .logos-container {
+        display: flex;
+    }
     .logo {
         margin-left: 2px;
         margin-top: 10px;
         width: 113px;
+        display: block;
     }
+
     .logo1 {
         margin-left: 10px;
+        width: 52px;
+        display: block;
     }
-    nav {
+
+    nav{
         height: 100px;
-        top: 0;
     }
-    .bar-btn {
+
+    .bar-btn{
         display: none;
     }
+
     .nav-menu {
+        position: relative;
         height: 100px;
         top: 0;
         background: none;
         transition: none;
         text-align: right;
+        margin-right: 50px;
     }
+
     .nav-menu li {
         display: inline-block;
         line-height: 100px;
         margin: 0 20px;
         transition: none;
     }
+
+    .nav-menu li a {
+        font-size: 20px;
+    }
+
     /*Seccion de banners*/
     .banner-principal {
         height: 640px;
         background-size: cover;
         background-image: url(../img/banner-principal.png);
-        background-attachment: fixed;
     }
+
     .logo2 {
         position: absolute;
         width: 650px;
         left: 23%;
         top: 35%;
         margin: 0;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
     }
+
     .banner-text {
         background-attachment: fixed;
     }
+
     .banner-text p {
         width: 900px;
         font-size: 30px;
@@ -386,33 +446,54 @@ h3 {
         margin-top: 0px;
         margin-bottom: 100px;
     }
+
     .banner-textSecond {
         background-image: url(../img/banner-text-second.png);
         padding: 280px;
         background-attachment: fixed;
+        text-align: -webkit-center;
     }
+
+    .curious-fact {
+        width: 363px;
+        height: 44px;
+        margin: 10px 15px;
+        font-weight: bold;
+        border: none;
+        cursor: pointer;
+    }
+
     /* ventana de champions, descripciones, barra de busqueda,*/
+    main.main-container {
+        padding-top: 0;
+    }
+
     .champions-container {
         margin-top: 135px;
         font-size: 34px;
     }
+
     .description-champions {
         font-size: 20px;
         line-height: 2rem;
     }
+
     h1 {
         line-height: 97px;
         font-size: 36px;
         padding: 55px;
         border-radius: 28px 28px 0 0;
     }
+
     h3 {
         font-size: 65px;
     }
+
     .champions {
         margin-left: 30px;
         margin-bottom: 28px;
     }
+
     /*search champion and button filter */
     .search-champion {
         height: 50px;
@@ -420,6 +501,7 @@ h3 {
         padding-left: 20px;
         font-size: 15px;
     }
+
     .orden {
         height: 50px;
         margin: 20px;
@@ -427,6 +509,7 @@ h3 {
         border-radius: 10px;
         font-size: 15px;
     }
+
     .filter-champions-by-roles {
         width: 163px;
         height: 44px;
@@ -435,39 +518,51 @@ h3 {
         font-weight: bold;
         cursor: pointer;
     }
+
+    .button-champion{
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+    }
     /*cards*/
     .champions {
         margin-left: 30px;
         margin-bottom: 28px;
         background-color: #000000;
     }
+
     .champions p {
         font-size: 24px;
         color: #f7f7f7;
         height: 40px;
     }
+
     .container-cards {
         margin-top: 18px;
     }
+
     #card {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         text-align: center;
     }
+
     .img-champions {
         width: 195px;
         height: 205px;
     }
+
     .name {
         font-size: 40px;
     }
+
     /*modals*/
     /* Modal Content */
     #box_content {
         width: 60%;
         height: 100%;
     }
+
     /*imagen del campeon*/
     .backgroung_img_champion {
         width: 50%;
@@ -475,6 +570,7 @@ h3 {
         left: 810px;
         top: 200px;
     }
+
     /*nombre del campeon*/
     .modal_name_champion {
         position: absolute;
@@ -486,6 +582,7 @@ h3 {
         font-size: 50px;
         text-align: center;
     }
+
     /*descripción*/
     .modal_description_champion {
         position: absolute;
@@ -498,20 +595,24 @@ h3 {
         font-size: 15px;
         text-align: center;
     }
+
     /*caracteristicas del campeón*/
     .modal_description_features {
         position: absolute;
         top: 60%;
         left: 52%;
     }
+
     .modal_description_features p {
         padding: 4px;
     }
+
     .modal_features {
         position: absolute;
         top: 64%;
         left: 52%;
     }
+
     .modal_features p {
         width: 60px;
         height: 60px;
