--- a/css/homepage.css
+++ b/css/homepage.css
@@ -216,7 +216,7 @@ h3 {
     border-radius: 10px;
     font-size: 15px;
 }
-
+.filter-all-champions,
 .filter-champions-by-roles {
     width: 85px;
     height: 32px;
@@ -509,7 +509,7 @@ h3 {
         border-radius: 10px;
         font-size: 15px;
     }
-
+    .filter-all-champions,
     .filter-champions-by-roles {
         width: 163px;
         height: 44px;
